# dcw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.musl  Dockerfile.uclibc  README.md  _clang-format  build-musl.sh  build-uclibc.sh  completion.bash  conanfile.txt  install.sh  reformat_sources.sh  update_changelog_from_git.sh
.github/workflows/: build.yml
cli/: CMakeLists.txt  add_command.cpp  add_command.h  base_command.cpp  base_command.h  compose_executor.cpp  compose_executor.h  config.h.in  dcw_config.cpp  dcw_config.h  list_command.cpp  list_command.h  main.cpp  process_executor.cpp  process_executor.h  state_repository.cpp  state_repository.h  switch_command.cpp  switch_command.h  workspace.h  workspace_service.cpp  workspace_service.h  workspaces_repository.cpp  workspaces_repository.h  yaml_config.cpp  yaml_config.h  yaml_workspaces_repository.cpp  yaml_workspaces_repository.h
cli/commands/: add_command.cpp  add_command.h  base_command.cpp  base_command.h  down_command.cpp  down_command.h  list_command.cpp  list_command.h  remove_command.cpp  remove_command.h  up_command.cpp  up_command.h
